# csmm-qt

./: .gitignore  .gitmodules  .travis.yml  AppIcon.icns  AppIcon.rc  CMakeLists.txt  FindZIP.cmake  Itast.brsar  Itast.csmm.brsar  README.md  additionalmodsdialog.cpp  additionalmodsdialog.h  additionalmodsdialog.ui  choosemode.cpp  choosemode.h  choosemode.ui  conanfile.txt  csmm.desktop  csmm.pro  csmm.qrc  csmmmode.h  csmmprogressdialog.cpp  csmmprogressdialog.h  darkdetect.h  downloadclidialog.cpp  downloadclidialog.h  downloadclidialog.ui  main.cpp  maincli.cpp  maincli.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdescriptorwidget.cpp  mapdescriptorwidget.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  pymain.cpp  quicksetupdialog.cpp  (+10 more)
.github/workflows/: cmake.yml  qmake.yml
docs/: conf.py  index.rst  testmod.py
files/: bspatches.yaml  sha1.yaml
files/chance_card/: ui_chancecard_018.cmpres.bsdiff  ui_chancecard_024.cmpres.bsdiff  ui_chancecard_034.cmpres.bsdiff  ui_chancecard_045.cmpres.bsdiff  ui_chancecard_047.cmpres.bsdiff  ui_chancecard_072.cmpres.bsdiff  ui_chancecard_083.cmpres.bsdiff  ui_chancecard_093.cmpres.bsdiff  ui_chancecard_123.cmpres.bsdiff  ui_chancecard_125.cmpres.bsdiff
files/chance_card/langDE/: ui_chancecard_024_DE.cmpres.bsdiff  ui_chancecard_034_DE.cmpres.bsdiff  ui_chancecard_037_DE.cmpres.bsdiff  ui_chancecard_064_DE.cmpres.bsdiff  ui_chancecard_072_DE.cmpres.bsdiff  ui_chancecard_076_DE.cmpres.bsdiff  ui_chancecard_118_DE.cmpres.bsdiff
files/chance_card/langEN/: ui_chancecard_016_EN.cmpres.bsdiff  ui_chancecard_042_EN.cmpres.bsdiff  ui_chancecard_049_EN.cmpres.bsdiff
files/chance_card/langES/: ui_chancecard_018_ES.cmpres.bsdiff  ui_chancecard_024_ES.cmpres.bsdiff  ui_chancecard_026_ES.cmpres.bsdiff  ui_chancecard_032_ES.cmpres.bsdiff  ui_chancecard_041_ES.cmpres.bsdiff  ui_chancecard_047_ES.cmpres.bsdiff  ui_chancecard_063_ES.cmpres.bsdiff  ui_chancecard_072_ES.cmpres.bsdiff  ui_chancecard_096_ES.cmpres.bsdiff  ui_chancecard_127_ES.cmpres.bsdiff
files/chance_card/langFR/: ui_chancecard_045_FR.cmpres.bsdiff  ui_chancecard_048_FR.cmpres.bsdiff  ui_chancecard_068_FR.cmpres.bsdiff  ui_chancecard_125_FR.cmpres.bsdiff
files/chance_card/langIT/: ui_chancecard_024_IT.cmpres.bsdiff  ui_chancecard_031_IT.cmpres.bsdiff  ui_chancecard_060_IT.cmpres.bsdiff  ui_chancecard_083_IT.cmpres.bsdiff  ui_chancecard_123_IT.cmpres.bsdiff
files/chance_card/langUK/: ui_chancecard_018_UK.cmpres.bsdiff  ui_chancecard_093_UK.cmpres.bsdiff
files/font/: font_ma_alps_gaiji.brfna.bsdiff
files/game/: game_board.cmpres.bsdiff
files/game/langDE/: game_board_DE.cmpres.bsdiff
files/game/langEN/: game_board_EN.cmpres.bsdiff
files/game/langES/: game_board_ES.cmpres.bsdiff
files/game/langFR/: game_board_FR.cmpres.bsdiff
files/game/langIT/: game_board_IT.cmpres.bsdiff
files/game/langUK/: game_board_UK.cmpres.bsdiff
files/sound/: Itast.brsar.bsdiff
languages/: en_US.qm  en_US.ts  english.ts  it_IT.qm  it_IT.ts  italian.ts  ja_JP.qm  ja_JP.ts  japanese.ts
lib/: addressmapping.cpp  addressmapping.h  archiveutil.h  asyncfuture.h  await.h  brsar.cpp  brsar.h  configuration.cpp  configuration.h  csmmnetworkmanager.cpp  csmmnetworkmanager.h  datafileset.h  downloadtools.h  exewrapper.cpp  exewrapper.h  fortunestreetdata.cpp  fortunestreetdata.h  freespacemanager.cpp  freespacemanager.h  fslocale.h  gameinstance.cpp  gameinstance.h  getordefault.h  importexportutils.cpp  importexportutils.h  lz77.cpp  lz77.h  maindol.cpp  maindol.h  mapdescriptor.cpp  mapdescriptor.h  music.h  optionalpatch.h  orderedmap.h  patchprocess.cpp  patchprocess.h  powerpcasm.cpp  powerpcasm.h  progresscanceled.h  region.cpp  (+16 more)
lib/benzin/: brlan.c  brlan.h  brlyt.c  brlyt.h  endian.c  endian.h  general.c  general.h  memfile.c  memfile.h  types.h  xml.c  xml.h
lib/brsar/: brsar.cpp  brsar.h
lib/bsdiff/: bsdifflib.c  bspatchlib.c
lib/dolio/: backgroundtable.cpp  backgroundtable.h  bgmidtable.cpp  bgmidtable.h  bgsequencetable.cpp  bgsequencetable.h  defaulttargetamounttable.cpp  defaulttargetamounttable.h  designtypetable.cpp  designtypetable.h  displaymapinresults.cpp  displaymapinresults.h  dolio.cpp  dolio.h  doliotable.h  eventsquare.cpp  eventsquare.h  expandmapsinzone.cpp  expandmapsinzone.h  forcesimulatedbuttonpress.cpp  forcesimulatedbuttonpress.h  frbmaptable.cpp  frbmaptable.h  internalnametable.cpp  internalnametable.h  mapdescriptiontable.cpp  mapdescriptiontable.h  mapgalaxyparamtable.cpp  mapgalaxyparamtable.h  mapicontable.cpp  mapicontable.h  maporigintable.cpp  maporigintable.h  mapsetzoneorder.cpp  mapsetzoneorder.h  mapswitchparamtable.cpp  mapswitchparamtable.h  musictable.cpp  musictable.h  mutatorrollshoppricemultiplier.cpp  (+35 more)
lib/hook/: abstractaction.cpp  abstractaction.h  abstractcomparison.cpp  abstractcomparison.h  abstractcondition.cpp  abstractcondition.h  abstractoperation.cpp  abstractoperation.h  comparisonlogic.cpp  comparisonlogic.h  conditionlogic.cpp  conditionlogic.h  generichook.cpp  generichook.h  triggerventurecard.cpp  triggerventurecard.h
lib/mods/: csmmmod.h  csmmmod_decl.h  csmmmodpack.h  defaultmodlist.cpp  defaultmodlist.h  modloader.cpp  modloader.h
lib/mods/arc/: defaultminimapicons.cpp  defaultminimapicons.h  turnlotscenes.cpp  turnlotscenes.h
lib/mods/dolio/: allocatedescriptorcount.cpp  allocatedescriptorcount.h  arbitrarynumswitchstates.cpp  arbitrarynumswitchstates.h  backgroundtable.cpp  backgroundtable.h  bgmidtable.cpp  bgmidtable.h  bgsequencetable.cpp  (+79 more)
lib/mutator/: mutator.cpp  mutator.h  rollagain.cpp  rollagain.h  rollshoppricemultiplier.cpp  rollshoppricemultiplier.h  shopprice.cpp  shopprice.h  shoppricemultiplier.cpp  shoppricemultiplier.h  stockprice.cpp  stockprice.h  stockpricemultiplier.cpp  stockpricemultiplier.h
lib/python/: pyobjcopywrapper.h  pythonbindings.cpp  pythonbindings.h  pythoncasters.h
palettes/: blueberry.json  chocolate.json  classic_dark.json  classic_light.json  kiwi.json  lemon.json  plum.json  pumpkin.json  sea_salt.json  spinach.json  strawberry.json  wine.json
(+22 files in other folders)
